@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-29T01:07:33Z",
+  "timestamp" : "2023-10-29T08:16:17Z",
   "count_outdated" : 1993,
   "uniques_outdated" : 413,
-  "count" : 2138,
-  "uniques" : 433,
+  "count" : 2139,
+  "uniques" : 434,
   "views" : [
     {
       "timestamp": "2023-10-15T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 11,
       "count_minmax": [ 11, 11 ],
       "count_decinc": [ 0, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
