@@ -1,6 +1,6 @@
 {
-  "count": 145,
-  "uniques": 17,
+  "count": 146,
+  "uniques": 18,
   "views": [
     {
       "timestamp": "2023-10-15T00:00:00Z",
@@ -65,6 +65,11 @@
     {
       "timestamp": "2023-10-28T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
